Rearranged timer_box to be on top for visibility, styling changes to better fit for landscape screens, and minor bug fix in the solver code (another n_cols, n_rows goof)

--- a/grid.css
+++ b/grid.css
@@ -1,5 +1,17 @@
+html {
+  height:100%;
+}
+
 body {
+  margin: 0;
+  width : 100%;
+  min-height : 100%;
   background-color: skyblue;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+
 }
 
 #board {
@@ -7,10 +19,10 @@ body {
   grid-template-columns : repeat(4, 1fr);
   grid-gap : 5px;
   /* superseded by javascript */
-  /* width: 75vmin; */
-  /* height: 75vmin; */
+  /* width: 90vmin; */
+  /* height: 90vmin; */
   /* aspect-ratio: 1; */
-  margin : 2vmin auto;
+  margin : 2vmin 5vmin;
   padding: 2vmin 2vmin;
   container-type : size;
   -webkit-user-select: none; /* Safari */        
@@ -26,10 +38,12 @@ body {
 
 #controls {
   display : grid;
-  grid-template-columns : 2fr 3fr 1fr 1fr 1fr;
+  grid-template-columns : 2fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
   grid-gap : 0.2em;
-  max-width : 80vw;
-  margin: 1vmin auto;
+  max-width : 80vmin;
+  max-height : 10rem;
+  margin: 1vmin 5vmin;
   margin-top: 3vmin;
   padding: 2vmin;
   /* height: 10vh; */
@@ -58,6 +72,7 @@ body {
 #timer_box {
   width : 100%;
   height : 100%;
+  grid-column : 1/-1;
   container-type: size;
   /* to justify center*/
   display: grid;
